examples/test/testpolicy1741.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1741
  namespace: namespace301
spec:
  podSelector:
    matchLabels:
      key15: value34
      key20: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value2
      podSelector:
        matchLabels:
          key35: value38
          key15: value1
          key34: value25
